<?xml version="1.0" encoding="utf-8"?>
<menu
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:android="http://schemas.android.com/apk/res/android">
   
   <item
      android:id="@+id/contacts_merge_merge_marked"
      android:icon="@drawable/ring"
      android:title="@string/contacts_merge_merge_marked"
      app:showAsAction="always" />
   <item
      android:id="@+id/contacts_merge_mark_unmark_all"
      android:icon="@drawable/checkbox"
      android:title="@string/contacts_merge_mark_unmark_all"
      app:showAsAction="always" />
   <item
      android:id="@+id/contacts_merge_mark_all"
      android:title="@string/contacts_merge_mark_all" />
   <item
      android:id="@+id/contacts_merge_unmark_all"
      android:title="@string/contacts_merge_unmark_all" />
   <item
      android:id="@+id/contacts_merge_merge"
      android:title="@string/contacts_merge_merge" />
   <item
      android:id="@+id/merge_contacts_merged_contacts"
      android:title="Bağlı Kişiler"
      app:showAsAction="never" />
   <item
      android:id="@+id/merge_contacts_refresh"
      android:title="Yenile"
      app:showAsAction="never" />
</menu>